fixing index for mobile and dark mode. Why FynCom paragraph won't center

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -28,7 +28,6 @@
   --size-gap: var(--space-6);
   --color-background-light: #fff;
     --color-background: #fff;
-
     --fyncom-blue: #4A90E2;
     --fyncom-blue-rgb: 74, 144, 226; /* The RGB equivalent of #4A90E2 */
     --fyncom-light-blue: #13DCEC;
@@ -76,18 +75,6 @@
         margin: 1.5rem auto;
         max-width: 500px;
     }
-  .fyncom-filters-gmail-edition {
-        content: var(--filters-gmail-light-mode);
-        margin: 1.5rem auto;
-    /*min-width: 400px;*/
-    /*max-width: 600px;*/
-    }
-  .karmacall-logo {
-        content: var(--karmacall-light-mode);
-        margin: 1.5rem auto;
-    /*min-width: 400px;*/
-    /*max-width: 600px;*/
-    }
 }
 
 /* Automatically switch to dark mode based on user's system preference */
@@ -121,12 +108,6 @@
         .fyncom-filters-words {
             content: var(--filters-dark-mode);
         }
-      .fyncom-filters-gmail-edition {
-            content: var(--filters-gmail-dark-mode);
-        }
-      .karmacall-logo {
-            content: var(--karmacall-dark-mode);
-        }
     }
 }
 
@@ -159,12 +140,6 @@
     }
     .fyncom-filters-words {
         content: var(--filters-dark-mode);
-    }
-    .fyncom-filters-gmail-edition {
-      content: var(--filters-gmail-dark-mode);
-    }
-    .karmacall-logo {
-      content: var(--karmacall-dark-mode);
     }
   }
 
